# Study1

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/context_gridworld/: __init__.py  agents.py  environment.py  experiment.py
tests/: test_simulation.py
