[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-gridworld"
version = "0.1.0"
description = "Minimal grid-world prototype for physical AI context reliability experiments."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
